--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,14 @@
+@article{mccune2022social,
+  title={Social behavior mediates the use of social and personal information in wild jays},
+  author={McCune, Kelsey B and Valente, Jonathon J and Jablonski, Piotr G and Lee, Sang-im and Ha, Renee R},
+  journal={Scientific Reports},
+  volume={12},
+  number={1},
+  pages={2494},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
 @article{karniski2015comparison,
   title={A comparison of survey and focal follow methods for estimating individual activity budgets of cetaceans},
   author={Karniski, Caitlin and Patterson, Eric M and Krzyszczyk, Ewa and Foroughirad, Vivienne and Stanton, Margaret A and Mann, Janet},
@@ -14331,11 +14342,31 @@ fixed sequences.},
 }
 
 
-@Article{Jombart2008adegenet,    title = {adegenet: a R package for the multivariate analysis of genetic markers},    journal = {Bioinformatics},    year = {2008},    author = {T. Jombart},    volume = {24},    pages = {1403-1405},    doi = {10.1093/bioinformatics/btn129},  }
+@Article{Jombart2008adegenet,
+    title = {adegenet: a R package for the multivariate analysis of genetic markers},
+    journal = {Bioinformatics},
+    year = {2008},
+    author = {T. Jombart},
+    volume = {24},
+    pages = {1403-1405},
+    doi = {10.1093/bioinformatics/btn129},
+  }
 
-  @Article{Paradis2010pegas,    title = {pegas: an {R} package for population genetics with an integrated--modular approach},    author = {E. Paradis},    journal = {Bioinformatics},    year = {2010},    volume = {26},    pages = {419-420},  }
+  @Article{Paradis2010pegas,
+    title = {pegas: an {R} package for population genetics with an integrated--modular approach},
+    author = {E. Paradis},
+    journal = {Bioinformatics},
+    year = {2010},
+    volume = {26},
+    pages = {419-420},
+  }
 
-  @Article{Tourvas2020popgenutils,    title = {PopGenUtils: an {R} package of helper functions for the analysis of population genetics data},    author = {N. Tourvas},    journal = {https://github.com/nikostourvas/PopGenUtils/},    year = {2020},  }
+  @Article{Tourvas2020popgenutils,
+    title = {PopGenUtils: an {R} package of helper functions for the analysis of population genetics data},
+    author = {N. Tourvas},
+    journal = {https://github.com/nikostourvas/PopGenUtils/},
+    year = {2020},
+  }
 
 
 @article{cockburn2006prevalence,
