--- a/Files/rrs/mi1jays.Rmd
+++ b/Files/rrs/mi1jays.Rmd
@@ -1152,8 +1152,8 @@ pp.div2$Location = ifelse(pp.div2$ID == "ak-ox" | pp.div2$ID == "wk-ox" |pp.div2
 
 ggplot(pp.div2[-which(pp.div2$variable == "height"),], aes(pp,value, group = ID, color = Location)) +
   facet_wrap(~ variable, scales = "free") +
-  geom_line() +
-  geom_point(size = 3, aes(color = Location)) +
+  geom_line(aes(color = Location),position = position_dodge(width =0.2)) +
+  geom_point(size = 3, aes(color = Location), position = position_dodge(width =0.2)) +
   theme_classic() +
   theme(legend.text = element_text(size = 18),
         legend.title = element_text(size = 22),
